gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/traits_child.d
version https://git-lfs.github.com/spec/v1
oid sha256:40cac7a787e97bdeac3c167eae1d57d1a709c152168cce4ad08d9e85c1d266d3
size 538
